added Double Checked Locking Singleton MultiThread