@@ -9,6 +9,10 @@ public class Main {
     public static void main(String[] args) {
         Scanner scan = new Scanner(System.in);
 
+        for (int i = 0; i < 5; i++) {
+            new Thread(() -> Logger.getInstance().log("new Thead " + Thread.currentThread().getName())).start();
+        }
+
         Logger logger = Logger.getInstance();
         logger.log("Запускаем программу!");
         logger.log("Просим пользователя ввести входные данные для списка");
@@ -19,7 +23,7 @@ public class Main {
         logger.log("Создаём и наполняем список");
         List<Integer> list = new Random().ints(length, 1, max)
                 .boxed()
-                .collect(Collectors.toList());
+                .toList();
         System.out.println("Вот случайный список: " + list);
         logger.log("Просим пользователя ввести входные данные для фильтрации");
         System.out.print("Введите порог для фильтра: ");
